--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "koa-onerror": "^4.1.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
-    "koa-views": "^6.2.0"
+    "koa-views": "^6.2.0",
+    "@koa/cors": "^4.0.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
