--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=dev ./node_modules/.bin/nodemon bin/www",
     "prd": "cross-env NODE_ENV=production pm2 start bin/www",
-    "test": ""
+    "lint": "eslint --ext .js ./src",
+    "test": "cross-env NODE_ENV=test jest --runInBand --forceExit --colors"
   },
   "dependencies": {
+    "@koa/cors": "^4.0.0",
     "debug": "^4.1.1",
     "ejs": "~2.3.3",
     "koa": "^2.7.0",
@@ -18,11 +20,18 @@
     "koa-onerror": "^4.1.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
-    "koa-views": "^6.2.0",
-    "@koa/cors": "^4.0.0"
+    "koa-views": "^6.2.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.3",
-    "nodemon": "^1.19.1"
-  }
+    "eslint": "^6.3.0",
+    "mysql2": "^3.6.0",
+    "nodemon": "^1.19.1",
+    "pre-commit": "^1.2.2",
+    "sequelize": "^6.32.1"
+  },
+  "pre-commit": [
+    "lint"
+  ]
 }
